# BJUT-Auto-Login

./: .gitignore  LICENSE  README.md  RELEASING.md  fix.py  fix_sortable.cjs  index.html  package-lock.json  package.json  refactor.cjs  refactor.py  setup_android.sh  test_macos.cjs
.github/workflows/: ci.yml  release.yml
scripts/: README-cas-services.md  README-jfself.md  capture-cas-services.sh  capture-jfself.sh  cas_services_capture.py  jfself_capture.py  test_cas_services_capture.py  test_jfself_capture.py
src/: account-migration.ts  config-crypto.ts  custom-select.ts  global.d.ts  main.ts  models.ts  network.ts  platform.ts  styles.css  update-utils.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  test.rs  test_tauri.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: dmg-background.tiff  icon.icns
src-tauri/src/: billing.rs  billing_runtime.rs  campus_services.rs  config_model.rs  cookie_jar.rs  lib.rs  network.rs  recharge_state.rs  test_jni.rs
src/assets/: subnets.json
test_jni_app/: Cargo.toml
test_jni_app/src/: main.rs
